# neighbourly_spam

./: .gitignore  pyproject.toml  requirements.txt  send_email.py  send_fb_message.py
